0.8.1.ab
    - corrected Receive syslogs in header.c
    - hardfail message too large and too many received headers

0.8.1.aa
    - dont overwrite CID for cf

0.8.1.z
    - bad return bugfix

0.8.1.y
    - Don't hang up after 554

0.8.1.x
    - MAX_CONNECT log bug fixed

0.8.1.w
    - make sure that RBL_BLOCK gives back IP Address
    - bugfix for TIMEOUT call
    - more standardization for smtp banners

0.8.1.v
    - SMTP_OFF mode defined
    - TCP Wrapers before RBLs
    - RBL bugfix
    - string mismatch bugfix

0.8.1.u
    - lbwrap_url bugfix
    - banner audit of 421/251

0.8.1.t
    - transmitted size bugfix

0.8.1.s
    - queue time bug fixed
    - SIMTA_PID, SIMTA_CID variables in cf now
    - report data read and wrote to a client relative to Dfile size
    - no double syslog message
    - log more of what the client says

0.8.1.r
    - bugfix

0.8.1.q
    - better rcpt accounting/logging
    - smtp functions returning SYSERROR get proper SMTP reply

0.8.1.p
    - better mail from/rcpt to metric counting
    - WRITE_BEFORE_BANNER config file bugfix

0.8.1.o
    - bugfixes

0.8.1.n
    - consuistent metrics in tempfail mode
    - SMTP mode changes are logged
    - Receive logging standard adhered to

0.8.1.m
    - Auth logging fixed
    - RBL logging fixed

0.8.1.l
    - makefile patch
    - RBL "secret messages" bugfix
    - SIMTA_UID available in the content filter
    - RBL accounting bugfig
    - switched from double to single linked list for connection_info tracking
    - syslog openlog() bug fixed

0.8.1.k
    - bugfix for connection search uninitilized variable fixed

0.8.1.j
    - simta unique PIDs
    - RBL logging cleaned up
    - connection throttling on a per IP basis introduced

0.8.1.i
    - pidfd locking hopefully better
    - Timezone info added to Received header
    - logging Members Only accept/deny explained
    - logging expansion depth metric
    - bugfix for sender matching memonly group

0.8.1.h
    - MAXHOSTNAMELEN bug fixed